# mpris-discord-rpc

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  config.yaml  mpris-discord-rpc.service  music-discord-rpc.service  nfpm.yaml  release-notes.txt
.github/: CONTRIBUTING.md  release-notes.md
.github/assets/: banner.xcf  demo.xcf  social_preview.xcf
.github/workflows/: build.yml  release.yml
Formula/: mpris-discord-rpc.rb  music-discord-rpc.rb
src/: main.rs  settings.rs  utils.rs
xbps/: template  update
