[package]
name = "mpris-discord-rpc"
version = "0.4.0"
edition = "2021"
authors = ["Patryk Kurdziel <patryk.kurdziel@protonmail.com>"]
description = "Linux Discord rich presence for music, using MPRIS with album cover and progress bar support."
repository = "https://github.com/patryk-ku/mpris-discord-rpc"
license = "MIT"

[dependencies]
discord-rich-presence = "0.2.5"
mpris = "2.0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
url-escape = "0.1.1"
serde_json = "1.0.140"
clap = { version = "4.5.35", features = ["derive"] }
pickledb = "0.5.1"
clap-serde-derive = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"

[build-dependencies]
dotenvy = "0.15.7"
