[package]
name = "music-discord-rpc"
version = "0.5.1"
edition = "2021"
authors = ["Patryk Kurdziel <patryk.kurdziel@protonmail.com>"]
description = "Cross-platform Discord rich presence for music with album cover and progress bar support."
repository = "https://github.com/patryk-ku/music-discord-rpc"
license = "MIT"

[dependencies]
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence", branch = "main" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
url-escape = "0.1.1"
serde_json = "1.0.141"
clap = { version = "4.5.42", features = ["derive"] }
pickledb = "0.5.1"
clap-serde-derive = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

# Linux dependencies
[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0.1"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"

[build-dependencies]
dotenvy = "0.15.7"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
	"libc.so*",
	"libdl.so*",
	"libpthread.so*",
	"libm.so*",
	"libgcc_s.so*",
	"ld-linux*.so*",
	"libsystemd.so*",
	"libcap.so*",
]
